welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:25: error: not found: value faireV
	faireV();
        ^PictureMono:26: error: not found: value faireV
	faireV();
        ^PictureMono:27: error: not found: value faireV
	faireV();
        ^PictureMono:28: error: not found: value faireV
	faireV();
        ^